add edit dialog

--- a/front-end/src/app/admin-panel/admin-panel.component.html
+++ b/front-end/src/app/admin-panel/admin-panel.component.html
@@ -20,7 +20,7 @@
     <ng-container matColumnDef="edit">
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let user"> 
-          <button mat-icon-button class="editButton" (click)="editUser(user)">
+          <button mat-icon-button class="editButton" (click)="openEditUser(user)">
             <mat-icon>edit</mat-icon>
           </button>
       </td>
