--- a/front-end/src/app/admin-panel/admin-panel.component.html
+++ b/front-end/src/app/admin-panel/admin-panel.component.html
@@ -25,7 +25,7 @@
     </ng-container>
   
     <ng-container matColumnDef="edit">
-      <th mat-header-cell *matHeaderCellDef></th>
+      <th mat-header-cell *matHeaderCellDef>Edycja</th>
       <td mat-cell *matCellDef="let user"> 
           <button mat-icon-button class="editButton" (click)="openEditUser(user)">
             <mat-icon>edit</mat-icon>
@@ -34,7 +34,7 @@
   </ng-container>
   
   <ng-container matColumnDef="delete">
-      <th mat-header-cell *matHeaderCellDef></th>
+      <th mat-header-cell *matHeaderCellDef>Usuń</th>
       <td mat-cell *matCellDef="let user">
           <button mat-icon-button class="deleteButton" (click)="deleteUser(user.id)">
               <mat-icon>delete</mat-icon>
@@ -42,10 +42,29 @@
       </td>
       <td mat-cell>test</td>
   </ng-container>
+
+  <ng-container matColumnDef="activ">
+    <th mat-header-cell *matHeaderCellDef>Aktywacja</th>
+    <td mat-cell *matCellDef="let user">
+        <button *ngIf="!user.activ" mat-icon-button class="activButton" (click)="activUser(user.id)">
+          <i class="material-icons">check_box_outline_blank</i>
+        </button>
+        <button *ngIf="user.activ" mat-icon-button class="activButton" (click)="activUser(user.id)">
+          <i class="material-icons">check_box</i>
+        </button>
+    </td>
+    <td mat-cell>test</td>
+</ng-container>
   
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   
   </table>
   
+</div>
+
+<button (click)="getAllMenu()">Pobierz</button>
+
+<div>
+  {{dane}}
 </div>
