--- a/front-end/src/app/login/login.component.html
+++ b/front-end/src/app/login/login.component.html
@@ -1,30 +1,28 @@
-<div *ngIf="isLoggedIn; else loggedOut">
-  <h2>Jesteś już zalogowany!</h2>
-</div>
- 
-<ng-template #loggedOut>
-<div class="content">
-  <h2>Zaloguj się!</h2>
-    <div style="width: 350px; margin-left: auto; margin-right: auto">
-      
-      <form>
-        <mat-form-field style="width: 350px">
-          <input matInput placeholder="Login" (keyup.enter)="login()" [(ngModel)]="form.username" name="username" required>
-        </mat-form-field>
-        
-        <mat-form-field style="width: 350px; padding-bottom: 20px">
-          <input matInput type="password" placeholder="Hasło" (keyup.enter)="login()" [(ngModel)]="form.password" name="password" required>
-        </mat-form-field>
-        <div class="loginButton">
-            <a mat-stroked-button class="buttonLogin" (click)="login()">Zaloguj się</a>
-        </div>
-      </form>
-
-      <h3>Nie masz jeszcze konta?<br>
-        <a routerLink="/register">Zarejestruj sie!</a>
-      </h3>
-
+<div class="container">
+    <div style="height: 100%;" *ngIf="isLoggedIn; else loggedOut">
+        <h2 class="title">Jesteś już zalogowany!</h2>
     </div>
+    <ng-template #loggedOut class="content">
+        <mat-card class="loginCard">
+          <mat-card-header>
+            <mat-card-title><h2>Zaloguj się!</h2></mat-card-title>
+          </mat-card-header>
+          <mat-card-content class="cardContent">
+            <form [formGroup] = "loginForm" (ngSubmit) = "login()" >
+              <mat-form-field>
+                <input matInput placeholder="Login" formControlName = "login" name="login" required>
+              </mat-form-field>
+              <mat-form-field>
+                <input matInput type="password" placeholder="Hasło" (keyup.enter)="login()" formControlName = "password" name="password" required>
+              </mat-form-field>
+              <a mat-stroked-button class="buttonLogin" (click)="login()">Zaloguj się</a>
+            </form>
+          </mat-card-content>
+          <mat-card-actions class="cardActions">
+              <h3>Nie masz jeszcze konta?<br/>
+                <a routerLink="/register">Zarejestruj sie!</a>
+              </h3>
+          </mat-card-actions>
+        </mat-card>
+    </ng-template>
 </div>
-
-</ng-template>
