--- a/front-end/src/app/menu/menu.component.html
+++ b/front-end/src/app/menu/menu.component.html
@@ -11,6 +11,7 @@
         <button mat-raised-button class="buttons"  [disabled]="menu.avtive==false" (click)="deleteMenu(menu.id)">Usuń</button>
       </mat-card-content>
   </mat-card>
-  </div>
+  <button mat-flat-button class="addBtn" (click)="addMenu()">Dodaj menu</button>
+</div>
 
-  działa
+  
