--- a/front-end/src/app/menu/add-menu.component.html
+++ b/front-end/src/app/menu/add-menu.component.html
@@ -1,31 +1,33 @@
 <div>
-    <h1 mat-dialog-title >Edycja użytkownika:</h1>
+    <h1 mat-dialog-title >Dodawanie menu:</h1>
 </div>
 
-<form [formGroup]="editForm" class="formEdit">
+<form [formGroup]="addForm" class="formEdit">
 
-    <mat-form-field >            
-        <input matInput formControlName="firstName" placeholder="Podaj imie"/>
-        <mat-error>
-            Imię jest <strong>wymagana</strong>!
-        </mat-error>
-    </mat-form-field>   
-
-    <mat-form-field >            
-        <input matInput formControlName="lastName" placeholder="Podaj nazwisko"/>
-        <mat-error>
-            Nazwisko jest <strong>wymagane</strong>!
-        </mat-error>
-    </mat-form-field>   
-
-    <mat-form-field >            
-        <input matInput formControlName="username" placeholder="Podaj login"/>
-        <mat-error>
-            Login jest <strong>wymagany</strong>!
-        </mat-error>
+    <mat-form-field> 
+        <input matInput formControlName="startDate" [owlDateTimeTrigger]="dtPicker1" [owlDateTime]="dtPicker1" placeholder="Rozpoczęcie" readonly>
+        <owl-date-time #dtPicker1></owl-date-time>
     </mat-form-field> 
 
-    <button mat-flat-button class="saveBtn" (click)="editUser()">Zapisz</button>
+    <mat-form-field> 
+        <input matInput formControlName="finishDate" [owlDateTimeTrigger]="dtPicker2" [owlDateTime]="dtPicker2" placeholder="Zakończenie" readonly>
+        <owl-date-time #dtPicker2></owl-date-time>
+    </mat-form-field> 
+
+    <mat-form-field> 
+        <input matInput formControlName="deliveryTime" [owlDateTimeTrigger]="dtPicker3" [owlDateTime]="dtPicker3" placeholder="Dostawa" readonly>
+        <owl-date-time #dtPicker3></owl-date-time>
+    </mat-form-field> 
+
+    <mat-form-field>
+        <mat-label>Dania</mat-label>
+        <mat-select  multiple formControlName="dishes">
+          <mat-option *ngFor="let dish of dishs" [value]="dish">{{dish.name}} - {{(dish.prize)/100}}</mat-option>
+        </mat-select>
+      </mat-form-field>
+
+    <button mat-flat-button class="saveBtn" (click)="addMenu()">Zapisz</button>
     <button mat-raised-button class="cancelBtn" (click)="cancel()">Anuluj</button>
     
 </form>
+
