--- a/front-end/src/app/dish-list/dish-list.component.css
+++ b/front-end/src/app/dish-list/dish-list.component.css
@@ -32,6 +32,13 @@ table{
     color: #fff;
 }
 
+.addBtn{
+    background: #0066ff;
+    color: #fff;
+    width: 100%;
+    margin-top: 15px;
+  }
+
 
 .saveBtn {
     background: #0066ff;
