--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -20,7 +20,10 @@
 
     <mat-drawer #drawer class="sideNav" mode="side">
       <a routerLink="/menu"> Menu </a><br/>
-      <a routerLink="/admin-panel"> Lista </a>
+      <a routerLink="/dish-list"> Dania </a><br/>
+      <a routerLink="/type-dish-list"> Typy dań </a><br/>
+      <a routerLink="/restaurant-list"> Restauracje </a><br/>
+      <a routerLink="/admin-panel"> Użytkownicy </a>
 
     </mat-drawer>
   
