--- a/front-end/src/app/menu/add-menu.component.html
+++ b/front-end/src/app/menu/add-menu.component.html
@@ -22,7 +22,7 @@
     <mat-form-field>
         <mat-label>Dania</mat-label>
         <mat-select  multiple formControlName="dishes">
-          <mat-option *ngFor="let dish of dishs" [value]="dish">{{dish.name}} - {{(dish.prize)/100}}</mat-option>
+          <mat-option *ngFor="let dish of dishs" [value]="dish">{{dish.name}} - {{dish.price / 100.0}} zł</mat-option>
         </mat-select>
       </mat-form-field>
 
