add menu-client finish

--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -23,6 +23,7 @@
       <a routerLink="/dish-list"> Dania </a><br/>
       <a routerLink="/type-dish-list"> Typy dań </a><br/>
       <a routerLink="/restaurant-list"> Restauracje </a><br/>
+      <a routerLink="/order-admin"> Zamówienia </a><br/>
       <a routerLink="/admin-panel"> Użytkownicy </a>
 
     </mat-drawer>
