add menu and order

--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -1,21 +1,23 @@
 <mat-drawer-container class="container" autosize>
     <mat-drawer-content id="allContent">
       <nav mat-tab-nav-bar backgroundColor="primary" class="topNav">
-        <a mat-tab-link *ngFor="let link of links"
-           (click)="activeLink = link.link"
-           [routerLink]="link.link"
-           [active]="activeLink == link.link"> {{link.name}} </a>
+        <a mat-tab-link (click)="activeLink = '/home'" routerLink="/home" [active]="activeLink == '/home'"> Strona główna </a>
+        <a mat-tab-link *ngIf="isLogin()" (click)="activeLink = '/menu-client'" routerLink="/menu-client" [active]="activeLink == '/menu-client'"> Menu </a>
+        <a mat-tab-link *ngIf="isLogin()" (click)="activeLink = '/my-order'" routerLink="/my-order" [active]="activeLink == '/my-order'"> Moje zamówienia </a>
+        <a mat-tab-link (click)="activeLink = '/login'" *ngIf="!isLogin()" routerLink="/login" [active]="activeLink == '/login'"> Zaloguj </a>
+        <a mat-tab-link (click)="activeLink = '/register'" *ngIf="!isLogin()" routerLink="/register" [active]="activeLink == '/register'"> Rejestracja </a>
+        <a mat-tab-link (click)="logout()" *ngIf="isLogin()"> Wyloguj </a>
       </nav>
 
       <div class="content" [ngClass]="{'showMenuActived': showSideNav}">
-          <button type="button" class="buttonSideNav" mat-button (click)="drawer.toggle(); showMenu()" >
+          <button type="button" *ngIf="isAdmin()" class="buttonSideNav" mat-button (click)="drawer.toggle(); showMenu()"  disableClose>
             <i *ngIf="showSideNav" class="material-icons iconShow"> navigate_before </i>
             <i *ngIf="!showSideNav" class="material-icons iconShow"> navigate_next </i>
           </button>
           <div class="contentPage">
             <router-outlet></router-outlet>
           </div>
-        </div>
+      </div>
     </mat-drawer-content>
 
     <mat-drawer #drawer class="sideNav" mode="side">
@@ -25,6 +27,7 @@
       <a routerLink="/restaurant-list"> Restauracje </a><br/>
       <a routerLink="/order-admin"> Zamówienia </a><br/>
       <a routerLink="/admin-panel"> Użytkownicy </a>
+      <a routerLink="/order-user"> Zamówienia użytkowników </a><br/>
 
     </mat-drawer>
   
