--- a/front-end/src/app/dish-list/dish-list-edit.component.html
+++ b/front-end/src/app/dish-list/dish-list-edit.component.html
@@ -27,7 +27,7 @@
 
     <mat-form-field>
         <mat-label>Restauracja</mat-label>
-        <mat-select formControlName="restaurant">
+        <mat-select formControlName="restaurant" [compareWith]="comparer">
           <mat-option *ngFor="let restaurant of restaurantList" [value]="restaurant">{{restaurant.name}}</mat-option>
         </mat-select>
         <mat-error>
@@ -37,7 +37,7 @@
 
     <mat-form-field>
         <mat-label>Typ</mat-label>
-        <mat-select multiple formControlName="type">
+        <mat-select multiple formControlName="type" [compareWith]="comparer">
           <mat-option *ngFor="let type of types" [value]="type">{{type.name}}</mat-option>
         </mat-select>
         <mat-error>
