--- a/front-end/src/app/menu-client/menu-client.component.css
+++ b/front-end/src/app/menu-client/menu-client.component.css
@@ -1,4 +1,11 @@
   
+.content{
+  padding: 20px;
+}
+.spinner{
+  margin:0 auto;
+}
+
 .list {
     margin-left: auto;
     margin-right: auto;
@@ -97,6 +104,14 @@
   text-align: center;
   font-weight: 700;
   font-size: 25px;
+}
+
+.title{
+  font-size: 18px;
+}
+
+.header{
+  padding: 20px;
 }
 
 
