--- a/front-end/src/app/menu-client/menu-client.component.html
+++ b/front-end/src/app/menu-client/menu-client.component.html
@@ -1,7 +1,9 @@
-<mat-accordion>
+<div class="content">
+  <mat-accordion *ngIf="isLoading; else notLoading">
+
     <mat-expansion-panel *ngFor="let menu of menuList">
-      <mat-expansion-panel-header>
-          <mat-panel-title>
+      <mat-expansion-panel-header class="header">
+          <mat-panel-title class="title">
             <b>Zamówienie na: {{menu.deliveryTime | date: 'dd/MM/yyyy HH:mm'}}</b>
           </mat-panel-title>
       </mat-expansion-panel-header>
@@ -37,4 +39,16 @@
         <button mat-flat-button class="addBtn" (click)="openAddOrder(menu)">Zamów</button>
       </div>
     </mat-expansion-panel>
+    <mat-expansion-panel *ngIf="!menuList.length" disabled=true>
+      <mat-expansion-panel-header>
+          <mat-panel-title>
+            <b>Aktualnie brak dostępnych menu</b>
+          </mat-panel-title>
+      </mat-expansion-panel-header>
+    </mat-expansion-panel>
   </mat-accordion>
+
+  <ng-template #notLoading>
+    <mat-spinner class="spinner" mode="indeterminate"></mat-spinner>
+  </ng-template>
+</div>
