--- a/front-end/src/app/order-admin/order-admin.component.html
+++ b/front-end/src/app/order-admin/order-admin.component.html
@@ -1,1 +1,20 @@
-<p>order-admin works!</p>
+<mat-accordion>
+    <mat-expansion-panel *ngFor="let menu of menus" (opened)="getOrderByMenu(menu)">
+      <mat-expansion-panel-header class="header">
+          <mat-panel-title class="title">
+            <b>Zamówienia na: <br/> {{menu.deliveryTime | date: 'dd/MM/yyyy HH:mm'}}</b>
+          </mat-panel-title>
+      </mat-expansion-panel-header>
+      <div class="content">
+        <mat-list>
+            <mat-list-item *ngFor="let dish of menu.dishes" >
+                <ng-container *ngIf="getQuantityDish(dish.id)">
+                    <div class="name">{{dish.name}}</div>
+                    <div class="quantity">X {{getQuantityDish(dish.id)}}</div>
+                    <mat-divider></mat-divider>
+                </ng-container>
+            </mat-list-item>
+        </mat-list>
+    </div>
+    </mat-expansion-panel>
+</mat-accordion>
