--- a/front-end/src/app/restaurant-list/restaurant-list-edit.component.html
+++ b/front-end/src/app/restaurant-list/restaurant-list-edit.component.html
@@ -34,12 +34,12 @@
 
     <mat-form-field> 
         <input matInput formControlName="openHour" [owlDateTimeTrigger]="dtPicker1" [owlDateTime]="dtPicker1" placeholder="Otwarcie" readonly>
-        <owl-date-time #dtPicker1></owl-date-time>
+        <owl-date-time [pickerType]="'timer'" #dtPicker1></owl-date-time>
     </mat-form-field> 
 
     <mat-form-field> 
         <input matInput formControlName="closeHour" [owlDateTimeTrigger]="dtPicker2" [owlDateTime]="dtPicker2" placeholder="Zamknięcie" readonly>
-        <owl-date-time #dtPicker2></owl-date-time>
+        <owl-date-time [pickerType]="'timer'" #dtPicker2></owl-date-time>
     </mat-form-field> 
 
     <button mat-flat-button class="saveBtn" (click)="editRestaurant()">Zapisz</button>
