--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -1,6 +1,7 @@
 <mat-drawer-container class="container" autosize>
     <mat-drawer-content id="allContent">
       <nav mat-tab-nav-bar backgroundColor="primary" class="topNav">
+        <a mat-tab-link *ngIf="isUser()" (click)="activeLink = '/my-panel'" routerLink="/my-panel" [active]="activeLink == '/my-panel'"><i class="material-icons">account_circle</i></a>
         <a mat-tab-link (click)="activeLink = '/home'" routerLink="/home" [active]="activeLink == '/home'"> Strona główna </a>
         <a mat-tab-link *ngIf="isUser()" (click)="activeLink = '/menu-client'" routerLink="/menu-client" [active]="activeLink == '/menu-client'"> Menu </a>
         <a mat-tab-link *ngIf="isUser()" (click)="activeLink = '/my-order'" routerLink="/my-order" [active]="activeLink == '/my-order'"> Moje zamówienia </a>
@@ -21,14 +22,20 @@
     </mat-drawer-content>
 
     <mat-drawer #drawer class="sideNav" mode="side">
-      <a routerLink="/menu"> Menu </a><br/>
-      <a routerLink="/dish-list"> Dania </a><br/>
-      <a routerLink="/type-dish-list"> Typy dań </a><br/>
-      <a routerLink="/restaurant-list"> Restauracje </a><br/>
-      <a routerLink="/order-admin"> Zamówienia </a><br/>
-      <a routerLink="/admin-panel"> Użytkownicy </a><br/>
-      <a routerLink="/order-user"> Zamówienia użytkowników </a><br/>
-      <a routerLink="/order-paid"> Zamówienia do zapłaty </a><br/>
+      <mat-nav-list class="menuLeft">
+        <a mat-list-item routerLink="/menu"> Menu </a>
+        <a mat-list-item routerLink="/admin-panel"> Użytkownicy </a>
+        <a mat-list-item [matMenuTriggerFor]="menu">Zamówienia</a>
+        <a mat-list-item routerLink="/dish-list"> Dania </a>
+        <a mat-list-item routerLink="/type-dish-list"> Typy dań </a>
+        <a mat-list-item routerLink="/restaurant-list"> Restauracje </a>
+        <mat-menu #menu="matMenu" class="menuLeftList">
+          <button mat-menu-item routerLink="/order-admin">Lista</button>
+          <button mat-menu-item routerLink="/order-user">Użytkowników</button>
+          <button mat-menu-item routerLink="/order-paid">Do zapłaty</button>
+        </mat-menu>
+      </mat-nav-list>
+
 
     </mat-drawer>
   
