--- a/front-end/src/app/home/home.component.css
+++ b/front-end/src/app/home/home.component.css
@@ -1,3 +1,33 @@
-h1{
+.heder{
+    text-align: left;
+    color: rgb(255, 255, 255);
+    font-weight: 900;
+    font-size: 70px;
+    position: relative;
+    top: -50px;
+    text-shadow: -1px 0 black, 0 1px black,
+      1px 0 black, 0 -1px black
+}
+
+.content{
+    padding: 20px;
+}
+
+.baner{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -11;
+}
+
+.text{
+    color: rgb(255, 255, 255);
     text-align: center;
+    font-size: 35px;
+    margin-right: auto;
+    margin-left: auto;
+    text-shadow: -1px 0 rgb(100, 100, 100), 0 1px rgb(100, 100, 100),
+    1px 0 rgb(100, 100, 100), 0 -1px rgb(100, 100, 100)
 }
