--- a/front-end/src/app/menu-client/menu-client.component.css
+++ b/front-end/src/app/menu-client/menu-client.component.css
@@ -76,17 +76,25 @@
 
 }
 
+.pozList{
+  padding-bottom: 20px;
+  padding-top: 20px;
+}
+
 .field{
   width: 300px;
+
 }
 
 .name{
   font-size: 20px;
   font-weight: 500;
+  padding-bottom: 10px;
 }
 
 .quantity{
  
+
 
 }
 
