--- a/front-end/src/app/menu/menu.component.html
+++ b/front-end/src/app/menu/menu.component.html
@@ -6,9 +6,10 @@
         <mat-card-subtitle>{{menu.finishDate | date: 'dd/MM/yyyy HH:mm' }}</mat-card-subtitle>
       </mat-card-header>
       <mat-card-content>
-        <button mat-raised-button class="buttons" [disabled]="menu.avtive" (click)="activeMenu(menu.id)">Aktywuj</button>
-        <button mat-raised-button class="buttons" (click)="editMenu(menu)">Edytuj</button>
-        <button mat-raised-button class="buttons"  [disabled]="menu.avtive==false" (click)="deleteMenu(menu.id)">Usuń</button>
+        <button mat-raised-button class="buttons" *ngIf="menu.avtive" (click)="activeMenu(menu.id)">Zatrzymaj</button>
+        <button mat-raised-button class="buttons" *ngIf="!menu.avtive" (click)="activeMenu(menu.id)">Aktywuj</button>
+        <button mat-raised-button class="buttons" [disabled]="menu.avtive" (click)="editMenu(menu)">Edytuj</button>
+        <button mat-raised-button class="buttons"  [disabled]="menu.avtive" (click)="archiveMenu(menu.id)">Usuń</button>
       </mat-card-content>
   </mat-card>
   <button mat-flat-button class="addBtn" (click)="addMenu()">Dodaj menu</button>
