--- a/front-end/src/app/menu-client/add-order.component.html
+++ b/front-end/src/app/menu-client/add-order.component.html
@@ -4,14 +4,16 @@
 
 <div class="formEdit">
     <mat-list>
-        <mat-list-item *ngFor="let dish of menu.dishes" class="pozList">
-            <div *ngIf="getQuantity(dish.id, menu.id)">
-                <div class="field name">{{dish.name}}</div>
-                <div class="field quantity">Ilość: {{getQuantity(dish.id, menu.id)}}</div>
-                <div class="field price">{{"+ " + (getQuantity(dish.id, menu.id)*dish.price/100  | number:'1.2-2') + " zł" }}</div>
-                <mat-divider class="line"></mat-divider>
-            </div>
-        </mat-list-item>
+        <ng-container *ngFor="let dish of menu.dishes">
+            <mat-list-item *ngIf="getQuantity(dish.id, menu.id)" class="pozList">
+                <div>
+                    <div class="field name">{{dish.name}}</div>
+                    <div class="field quantity">Ilość: {{getQuantity(dish.id, menu.id)}}</div>
+                    <div class="field price">{{"+ " + (getQuantity(dish.id, menu.id)*dish.price/100  | number:'1.2-2') + " zł" }}</div>
+                    <mat-divider class="line"></mat-divider>
+                </div>
+            </mat-list-item>
+        </ng-container>
     </mat-list>
 
     <div class="sum">
