--- a/front-end/src/app/dish-list/dish-list-edit.component.html
+++ b/front-end/src/app/dish-list/dish-list-edit.component.html
@@ -12,7 +12,7 @@
     </mat-form-field>   
 
     <mat-form-field >            
-        <input matInput formControlName="description" placeholder="Opis"/>
+        <textarea matInput formControlName="description" placeholder="Opis"></textarea>
         <mat-error>
             Opis jest <strong>wymagany</strong>!
         </mat-error>
