--- a/front-end/src/app/order-admin/order-admin.component.html
+++ b/front-end/src/app/order-admin/order-admin.component.html
@@ -8,13 +8,13 @@
           </mat-expansion-panel-header>
           <div class="content">
             <mat-list>
-                <mat-list-item *ngFor="let dish of menu.dishes" >
-                    <ng-container *ngIf="getQuantityDish(dish.id)">
+                <ng-container *ngFor="let dish of menu.dishes">
+                    <mat-list-item *ngIf="getQuantityDish(dish.id)" >
                         <div class="name">{{dish.name}}</div>
                         <div class="quantity">X {{getQuantityDish(dish.id)}}</div>
                         <mat-divider></mat-divider>
-                    </ng-container>
-                </mat-list-item>
+                    </mat-list-item>
+                </ng-container>
             </mat-list>
         </div>
         </mat-expansion-panel>
