--- a/front-end/src/app/order-user/order-user.component.html
+++ b/front-end/src/app/order-user/order-user.component.html
@@ -1,7 +1,7 @@
 <div class="content">
     <mat-accordion>
         <mat-expansion-panel *ngFor="let menu of menus" (opened)="getOrderByMenu(menu)">
-          <mat-expansion-panel-header class="header">
+          <mat-expansion-panel-header class="header" >
               <mat-panel-title class="title">
                 <b>Zamówienia na: <br/> {{menu.deliveryTime | date: 'dd/MM/yyyy HH:mm'}}</b>
               </mat-panel-title>
@@ -11,13 +11,13 @@
                     {{user.firstName}} {{user.lastName}}
                 </div>
                 <mat-list>
-                    <mat-list-item *ngFor="let dish of menu.dishes" >
-                        <ng-container *ngIf="getQuantityDish(user.id, dish.id)">
+                    <ng-container *ngFor="let dish of menu.dishes">
+                        <mat-list-item *ngIf="getQuantityDish(user.id, dish.id)" >
                             <div class="name">{{dish.name}}</div>
                             <div class="quantity">X {{getQuantityDish(user.id, dish.id)}}</div>
                             <mat-divider></mat-divider>
-                        </ng-container>
-                    </mat-list-item>
+                        </mat-list-item>
+                    </ng-container>
                 </mat-list>
             </div>
         </mat-expansion-panel>
